kubernetes2/deployment.yaml
# Update <REGISTRY> <NAMESPACE> values before use
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-names
  labels:
    app: get-names
spec:
  replicas: 3
  selector:
    matchLabels:
      app: get-names
  template:
    metadata:
      labels:
        app: get-names
    spec:
      containers:
      - name: get-names
        image: uk.icr.io/drsns/getnames:v99
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
