kubernetes2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: get-names
  labels:
    app: get-names
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: get-names
  type: ClusterIP
